# elmio-templates

./: README.md
counter-tailwind/: Cargo.toml  post_build.sh  routes.elmio
counter-tailwind/counter_cli/: Cargo.toml
counter-tailwind/counter_cli/src/: main.rs
counter-tailwind/counter_core/: Cargo.toml
counter-tailwind/counter_wasm/: Cargo.toml
counter-tailwind/counter_wasm/src/: home_page.rs
counter-tailwind/counter_web/: package-lock.json  package.json  tailwind.config.js
counter-tailwind/counter_web/src/: home_page.ts
counter-tailwind/counterapp_cli/: Cargo.toml
counter-tailwind/counterapp_cli/src/: main.rs
counter-tailwind/counterapp_core/: Cargo.toml
counter-tailwind/counterapp_core/src/: home_page.rs
counter-tailwind/counterapp_wasm/: Cargo.toml
counter-tailwind/counterapp_wasm/src/: home_page.rs
counter-tailwind/counterapp_web/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
counter-tailwind/counterapp_web/src/: home_page.ts
elmio-tailwind/: Cargo.toml  post_build.sh  routes.elmio  run_dev.sh
elmio-tailwind/app_cli/: Cargo.toml
elmio-tailwind/app_cli/src/: main.rs
elmio-tailwind/app_core/: Cargo.toml
elmio-tailwind/app_core/src/: home_page.rs
elmio-tailwind/app_wasm/: Cargo.toml
elmio-tailwind/app_wasm/src/: home_page.rs
elmio-tailwind/app_web/: .gitignore  biome.json  package-lock.json  package.json  tailwind.config.js
elmio-tailwind/app_web/src/: home_page.ts
elmio-tailwind/elmio-tailwind-cli/: Cargo.toml
elmio-tailwind/elmio-tailwind-cli/src/: main.rs
elmio-tailwind/elmio-tailwind-core/: Cargo.toml
elmio-tailwind/elmio-tailwind-core/src/: home_page.rs
elmio-tailwind/elmio-tailwind-wasm/: Cargo.toml
elmio-tailwind/elmio-tailwind-wasm/src/: home_page.rs
elmio-tailwind/elmio-tailwind-web/: package.json
