[workspace]
resolver = "2"
members = [
    "elmio-tailwind-cli",
    "elmio-tailwind-core",
    "elmio-tailwind-wasm",
]

[workspace.dependencies]
serde_json = "1.0.132"
elmio-core = "0.2.0"
elmio-macro = "0.2.0"
serde ={ version = "1.0.214", features = ["derive"] }
url = { version = "2.5.3", features = ["serde"] }