[package]
name = "counterapp_wasm"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
counterapp_core = { path = "../counterapp_core" }
elmio-core = { workspace = true }
elmio-macro = { workspace = true }
serde = { workspace = true }
wasm-bindgen = { version = "0.2.95", features = ["serde-serialize"] }
