[package]
name = "app_core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
elmio-core ={ workspace = true }
elmio-macro ={ workspace = true }
maud = "0.26.0"
serde ={ workspace = true }
serde_json ={ workspace = true }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
url ={ workspace = true }
