[package]
name = "elmio-tailwind-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde_json = { workspace = true }
elmio-core = { workspace = true }
url = { workspace = true }
elmio-tailwind-core = { path = "../elmio-tailwind-core" }
