[package]
name = "elmio-tailwind-wasm"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
elmio-tailwind-core = { path = "../elmio-tailwind-core" }
elmio-core = { workspace = true }
elmio-macro = { workspace = true }
serde = { workspace = true }
wasm-bindgen = { version = "0.2.95", features = ["serde-serialize"] }
